--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/fortify": "^1.7",
-        "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "php": "^8.2|^8.3",
+        "brick/math": "^0.11",
+        "doctrine/inflector": "^2.0",
+        "dragonmantank/cron-expression": "^3.3",
+        "egulias/email-validator": "^4.0",
+        "guzzlehttp/guzzle": "^7.8",
+        "guzzlehttp/promises": "^2.0",
+        "guzzlehttp/psr7": "^2.6",
+        "laravel/fortify": "^1.21",
+        "laravel/framework": "^11.3",
+        "laravel/tinker": "^2.9",
+        "league/commonmark": "^2.4",
+        "league/flysystem": "^3.27",
+        "monolog/monolog": "^3.6",
+        "nesbot/carbon": "^3.2",
+        "psr/container": "^2.0",
+        "ramsey/uuid": "^4.7",
+        "symfony/console": "^7.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "fakerphp/faker": "^1.23",
+        "phpunit/phpunit": "^9.6"
     },
     "config": {
         "optimize-autoloader": true,
